--- a/src/com/emlago/matrix/matrix.fxml
+++ b/src/com/emlago/matrix/matrix.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<Pane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<Pane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.emlago.matrix.Controller">
    <children>
       <HBox>
          <children>
